# rivett

./: Cargo.toml  README.md  ROADMAP.md  TASKS.md  tmp_sub.rs  tmp_update.rs  tmp_view.rs
resources/: app-icon.icns
scripts/: build-macos.sh
scripts/macos/: build_dmg.sh  make_icns.sh
src/: main.rs  settings_app.rs
src/core/: backend.rs  mod.rs  session.rs
src/platform/: macos_menu.rs  mod.rs
src/session/: config.rs  mod.rs  storage.rs
src/settings/: mod.rs
src/ssh/: connection.rs  mod.rs  session.rs
src/terminal/: emulator.rs  input.rs  mod.rs
src/ui/: app.rs  message.rs  mod.rs  state.rs  style.rs  terminal_colors.rs  terminal_gpu_widget.rs  terminal_widget.rs
src/ui/components/: anchored_menu.rs  dropdown.rs  mod.rs  port_forward_dialog.rs  session_card.rs  session_dialog.rs  session_form.rs
src/ui/domain/: mod.rs  settings.rs  subscription.rs  terminal.rs  view.rs
src/ui/domain/update/: local.rs  mod.rs  sessions.rs  terminal.rs  window.rs
src/ui/views/: mod.rs  quick_connect.rs  session_manager.rs  sftp.rs  sidebar.rs  status_bar.rs  tab_bar.rs  terminal.rs  terminal_gpu.rs
