[package]
name = "ssh-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "tokio", "svg"] }
iced_core = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
parking_lot = "0.12"
portable-pty = "0.8"

# SSH connection
russh = "0.44"
russh-keys = "0.44"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Terminal emulation
alacritty_terminal = "0.25"
