[package]
name = "ssh-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio", "svg"] }
iced_core = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
parking_lot = "0.12"
portable-pty = "0.8"

# SSH connection
russh = { version = "0.57.0", default-features = false, features = ["flate2", "aws-lc-rs", "rsa"] }
russh-sftp = "2.1.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3.6.3"
fontdb = "0.16"

# Terminal emulation
alacritty_terminal = "0.25"
libc = "0.2"
unicode-width = "0.1"
rfd = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[package.metadata.bundle]
name = "SSH GUI"
identifier = "com.sshgui.app"
icon = ["resources/app-icon.icns"]
